cabal-version:       3.4
name:                w06
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md

common common
  ghc-options:        -Wall
  build-depends:      base ^>= 4.18.1

library
  import:               common
  hs-source-dirs:       src
  Exposed-Modules:      W0601
                      , W0602
                      , W0603
  build-depends:        containers
                      , mtl
                      , QuickCheck
  default-language:     Haskell2010

test-suite w06-doctests
  import:               common
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:        doctest
                      , template-haskell
  ghc-options:          -threaded
  hs-source-dirs:       doctest
  default-language:     Haskell2010
